WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234786
[LFC][IFC] Unexpected line break with leading collapsed whitespace
https://bugs.webkit.org/show_bug.cgi?id=234786
Summary
[LFC][IFC] Unexpected line break with leading collapsed whitespace
alan
Reported
2022-01-01 11:48:44 PST
ssia
Attachments
Patch
(4.65 KB, patch)
2022-01-01 11:57 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-01-01 11:57:37 PST
Created
attachment 448157
[details]
Patch
EWS
Comment 2
2022-01-01 14:56:00 PST
Committed
r287504
(
245639@main
): <
https://commits.webkit.org/245639@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448157
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-01-01 14:57:19 PST
<
rdar://problem/87042239
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug