[LFC][IFC] Unexpected line break with leading collapsed whitespace https://bugs.webkit.org/show_bug.cgi?id=234786

Reviewed by Antti Koivisto.

Source/WebCore:

We use Line::hasContent to decide whether an overflowing content should be wrapped to the next line.
Line is considered empty unless it has at least one content-type run.

Test: fast/inline/unexpected-line-break-on-empty-content.html

* layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::hasContent const):

LayoutTests:

* fast/inline/unexpected-line-break-on-empty-content-expected.html: Added.
* fast/inline/unexpected-line-break-on-empty-content.html: Added.



Canonical link: https://commits.webkit.org/245639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287504 268f45cc-cd09-0410-ab3c-d52691b4dbfc